--- a/MasterPages/MasterPage.master
+++ b/MasterPages/MasterPage.master
@@ -29,7 +29,10 @@
                             NavigateUrl="~/Home.aspx"> Home </asp:HyperLink>
 						
                         <a class="dropdown-item" href="#">Photo Gallery</a>
-                        <a class="dropdown-item" href="#">Map</a>
+						<asp:HyperLink ID="HyperLinkMap" 
+                            CssClass="dropdown-item" 
+                            runat="server" 
+                            NavigateUrl="~/Map.aspx"> Map </asp:HyperLink>
 						<asp:HyperLink ID="HyperLinkContact" 
 							CssClass="dropdown-item" 
 							runat="server" 
